# Online-Trading-Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  db.sqlite3  docker-compose.yml  fixtures.json  pyproject.toml  server-entrypoint.sh  users_modified.json  worker-entrypoint.sh
config_data/: config.py  dirs.py
online_trading_platform/: admin.py  apps.py  filters.py  forms.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
online_trading_platform/management/commands/: createsuperuser-ifnotexists.py
online_trading_platform/migrations/: 0001_initial.py  0002_merchant_employee_merchant_product_merchant_and_more.py  0003_remove_product_merchant_merchant_products.py  0004_alter_employee_merchant_alter_merchant_contacts_and_more.py
postgres/: Dockerfile
project/: celery.py  settings.py  urls.py
redis/: Dockerfile
